revert to include all csv's